--- a/package.json
+++ b/package.json
@@ -3,149 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "abbrev": "^1.1.1",
-    "anymatch": "^3.1.2",
-    "accepts": "^1.3.8",
-    "assert-plus": "^1.0.0",
-    "asn1": "^0.2.6",
-    "array-flatten": "^1.1.1",
-    "aws4": "^1.11.0",
-    "base64-js": "^1.5.1",
-    "ajv": "^6.12.6",
-    "asynckit": "^0.4.0",
-    "bcrypt-pbkdf": "^1.0.2",
-    "aws-sign2": "^0.7.0",
-    "balanced-match": "^1.0.2",
-    "body-parser": "^1.20.0",
-    "bluebird": "^2.11.0",
-    "bytes": "^3.1.2",
-    "brotli": "^1.3.3",
-    "call-bind": "^1.0.2",
-    "combined-stream": "^1.0.8",
-    "concat-map": "^0.0.1",
-    "caseless": "^0.12.0",
-    "content-disposition": "^0.5.4",
-    "content-type": "^1.0.4",
-    "cookie": "^0.5.0",
-    "chokidar": "^3.5.3",
-    "cookie-signature": "^1.0.6",
-    "core-util-is": "^1.0.2",
-    "debug": "^2.6.9",
-    "dashdash": "^1.14.1",
-    "brace-expansion": "^1.1.11",
-    "delayed-stream": "^1.0.0",
-    "depd": "^2.0.0",
-    "destroy": "^1.2.0",
-    "ecc-jsbn": "^0.1.2",
-    "ee-first": "^1.1.1",
-    "encodeurl": "^1.0.2",
-    "escape-html": "^1.0.3",
-    "braces": "^3.0.2",
-    "etag": "^1.8.1",
-    "extend": "^3.0.2",
-    "extsprintf": "^1.3.0",
-    "express": "^4.18.1",
-    "fast-json-stable-stringify": "^2.1.0",
-    "fill-range": "^7.0.1",
-    "fast-deep-equal": "^3.1.3",
-    "binary-extensions": "^2.2.0",
-    "finalhandler": "^1.2.0",
-    "forever-agent": "^0.6.1",
-    "forwarded": "^0.2.0",
-    "get-intrinsic": "^1.1.2",
-    "function-bind": "^1.1.1",
-    "glob-parent": "^5.1.2",
-    "har-schema": "^2.0.0",
-    "har-validator": "^5.1.5",
-    "getpass": "^0.1.7",
-    "has": "^1.0.3",
-    "has-flag": "^3.0.0",
-    "has-symbols": "^1.0.3",
-    "http-errors": "^2.0.0",
-    "iconv-lite": "^0.4.24",
-    "http-signature": "^1.3.6",
-    "ignore-by-default": "^1.0.1",
-    "inherits": "^2.0.4",
-    "is-binary-path": "^2.1.0",
-    "is-extglob": "^2.1.1",
-    "is-number": "^7.0.0",
-    "is-typedarray": "^1.0.0",
-    "jsbn": "^0.1.1",
-    "fresh": "^0.5.2",
-    "is-glob": "^4.0.3",
-    "isstream": "^0.1.2",
-    "json-schema": "^0.4.0",
-    "json-stringify-safe": "^5.0.1",
-    "jsprim": "^2.0.2",
-    "media-typer": "^0.3.0",
-    "merge-descriptors": "^1.0.1",
-    "methods": "^1.1.2",
-    "mime": "^1.6.0",
-    "ipaddr.js": "^1.9.1",
-    "mime-types": "^2.1.35",
-    "mime-db": "^1.52.0",
-    "nodemon": "^2.0.19",
-    "ms": "^2.0.0",
-    "nopt": "^1.0.10",
-    "normalize-path": "^3.0.0",
-    "oauth-sign": "^0.9.0",
-    "negotiator": "^0.6.3",
-    "object-inspect": "^1.12.2",
-    "on-finished": "^2.4.1",
-    "parseurl": "^1.3.3",
-    "path-to-regexp": "^0.1.7",
-    "performance-now": "^2.1.0",
-    "picomatch": "^2.3.1",
-    "proxy-addr": "^2.0.7",
-    "postman-request": "^2.88.1-postman.31",
-    "psl": "^1.9.0",
-    "punycode": "^2.1.1",
-    "pstree.remy": "^1.1.8",
-    "qs": "^6.10.3",
-    "range-parser": "^1.2.1",
-    "raw-body": "^2.5.1",
-    "minimatch": "^3.1.2",
-    "readdirp": "^3.6.0",
-    "safe-buffer": "^5.2.1",
-    "safer-buffer": "^2.1.2",
-    "send": "^0.18.0",
-    "setprototypeof": "^1.2.0",
-    "serve-static": "^1.15.0",
-    "side-channel": "^1.0.4",
-    "simple-update-notifier": "^1.0.7",
-    "semver": "^5.7.1",
-    "sshpk": "^1.17.0",
-    "statuses": "^2.0.1",
-    "supports-color": "^5.5.0",
-    "to-regex-range": "^5.0.1",
-    "toidentifier": "^1.0.1",
-    "touch": "^3.1.0",
-    "tough-cookie": "^2.5.0",
-    "tweetnacl": "^0.14.5",
-    "undefsafe": "^2.0.5",
-    "type-is": "^1.6.18",
-    "uuid": "^3.4.0",
-    "unpipe": "^1.0.0",
-    "vary": "^1.1.2",
-    "uri-js": "^4.4.1",
-    "verror": "^1.10.0",
-    "stream-length": "^1.0.2",
-    "utils-merge": "^1.0.1",
-    "json-schema-traverse": "^0.4.1"
-  },
-  "devDependencies": {},
   "scripts": {
-    "start" : "node src/app.js"
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/keyhanCode/Weather-App.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/keyhanCode/Weather-App/issues"
   },
-  "homepage": "https://github.com/keyhanCode/Weather-App#readme"
+  "homepage": "https://github.com/keyhanCode/Weather-App#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "hbs": "^4.2.0",
+    "postman-request": "^2.88.1-postman.31"
+  }
 }
